--- a/src/application/views/CreateAccount.fxml
+++ b/src/application/views/CreateAccount.fxml
@@ -11,20 +11,20 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="800.0" prefWidth="930.0" style="-fx-background-color: #222831;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controllers.SignupController">
+<AnchorPane prefHeight="800.0" prefWidth="930.0" style="-fx-background-color: #222831;" stylesheets="@./css/style.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controllers.views.SignupController">
     <children>
-        <Pane prefHeight="97.0" prefWidth="930.0">
+        <Pane prefHeight="97.0" prefWidth="930.0" styleClass="header-pane">
             <children>
-                <Label layoutX="376.0" layoutY="21.0" style="-fx-text-fill: #ffffff;" text="Studzzy">
+                <Label layoutX="376.0" layoutY="21.0" styleClass="brand-label" text="Studzzy">
                     <font>
                         <Font size="45.0" />
                     </font>
                 </Label>
             </children>
         </Pane>
-        <Pane layoutX="120.0" layoutY="97.0" prefHeight="577.0" prefWidth="690.0" style="-fx-background-color: #393E46;">
+        <Pane layoutX="120.0" layoutY="127.0" prefHeight="577.0" prefWidth="690.0" styleClass="cta">
             <children>
-                <TextField fx:id="firstNameField" layoutX="45.0" layoutY="136.0" prefHeight="36.0" prefWidth="270.0" promptText="John" style="-fx-background-color: inherit; -fx-border-color: #F05454; -fx-border-width: 0 0 2 0; -fx-padding: 0; -fx-text-fill: white;">
+                <TextField fx:id="firstNameField" layoutX="45.0" layoutY="136.0" prefHeight="36.0" prefWidth="270.0" promptText="John" styleClass="cta-text-field">
                     <font>
                         <Font size="18.0" />
                     </font>
@@ -42,12 +42,12 @@
 
                 <!--      <FontAwesomeIconView fill="WHITE" glyphName="USER" layoutX="294.0" layoutY="186.0" size="20" wrappingWidth="19.300000190734863" />-->
                 <!--      <FontAwesomeIconView fill="WHITE" glyphName="KEY" layoutX="341.0" layoutY="273.0" size="20" wrappingWidth="19.300000190734863" />-->
-                <Button fx:id="createAccountButton" layoutX="217.0" layoutY="464.0" mnemonicParsing="false" onAction="#createAccount" prefHeight="39.0" prefWidth="270.0" style="-fx-background-color: #F05454; -fx-text-fill: #ffffff; -fx-border-radius: 0px;" text="Create Account">
+                <Button fx:id="createAccountButton" layoutX="217.0" layoutY="464.0" mnemonicParsing="false" onAction="#createAccount" prefHeight="39.0" prefWidth="270.0" styleClass="cta-button" text="Create Account">
                     <font>
                         <Font size="20.0" />
                     </font>
                 </Button>
-            <TextField fx:id="emailField" layoutX="48.0" layoutY="316.0" prefHeight="36.0" prefWidth="270.0" promptText="johndoe@email.com" style="-fx-background-color: inherit; -fx-border-color: #F05454; -fx-border-width: 0 0 2 0; -fx-padding: 0; -fx-text-fill: white;">
+            <TextField fx:id="emailField" layoutX="48.0" layoutY="316.0" prefHeight="36.0" prefWidth="270.0" promptText="johndoe@email.com" style=": white;" styleClass="cta-text-field">
                <font>
                   <Font size="18.0" />
                </font>
@@ -62,12 +62,12 @@
                   <Font size="22.0" />
                </font>
             </Label>
-            <PasswordField fx:id="passwordField" layoutX="51.0" layoutY="401.0" prefHeight="36.0" prefWidth="270.0" promptText="***" style="-fx-background-color: inherit; -fx-border-color: #F05454; -fx-border-width: 0 0 2 0; -fx-padding: 0; -fx-text-fill: white;">
+            <PasswordField fx:id="passwordField" layoutX="51.0" layoutY="401.0" prefHeight="36.0" prefWidth="270.0" promptText="***" styleClass="cta-text-field">
                <font>
                   <Font size="18.0" />
                </font>
             </PasswordField>
-            <TextField fx:id="universityField" layoutX="352.0" layoutY="136.0" prefHeight="36.0" prefWidth="270.0" promptText="eg JKUAT, UON, KU...etc" style="-fx-background-color: inherit; -fx-border-color: #F05454; -fx-border-width: 0 0 2 0; -fx-padding: 0; -fx-text-fill: white;">
+            <TextField fx:id="universityField" layoutX="352.0" layoutY="136.0" prefHeight="36.0" prefWidth="270.0" promptText="eg JKUAT, UON, KU...etc" styleClass="cta-text-field">
                <font>
                   <Font size="18.0" />
                </font>
@@ -92,8 +92,8 @@
                   <Font size="22.0" />
                </font>
             </Label>
-            <DatePicker fx:id="startSemDatePicker" layoutX="350.0" layoutY="319.0" prefHeight="36.0" prefWidth="270.0" />
-            <DatePicker fx:id="endSemDatePicker" layoutX="350.0" layoutY="401.0" prefHeight="36.0" prefWidth="270.0" />
+            <DatePicker fx:id="startSemDatePicker" layoutX="352.0" layoutY="316.0" prefHeight="36.0" prefWidth="270.0" styleClass="cta-date-picker" />
+            <DatePicker fx:id="endSemDatePicker" layoutX="350.0" layoutY="401.0" prefHeight="36.0" prefWidth="270.0" styleClass="cta-date-picker" />
             <Button fx:id="loginButton" layoutX="223.0" layoutY="530.0" mnemonicParsing="false" onAction="#loginUser" prefHeight="30.0" prefWidth="270.0" style="-fx-background-color: inherit; -fx-text-fill: #ffffff; -fx-border-radius: 0px;" text="Login">
                <font>
                   <Font size="14.0" />
@@ -104,21 +104,21 @@
                   <Font size="10.0" />
                </font>
             </Label>
-            <Pane layoutX="1.0" prefHeight="64.0" prefWidth="690.0" style="-fx-border-color: white; -fx-border-width: 0 0 2 0;">
+            <Pane layoutX="1.0" prefHeight="64.0" prefWidth="690.0" styleClass="cta-pane">
                <children>
-                  <Label layoutX="29.0" layoutY="12.0" style="-fx-text-fill: #ffffff;" text="Create Account">
+                  <Label layoutX="29.0" layoutY="12.0" styleClass="cta-header" text="Create Account">
                      <font>
                         <Font size="34.0" />
                      </font>
                   </Label>
                </children>
             </Pane>
-            <TextField fx:id="lastNameField" layoutX="45.0" layoutY="221.0" prefHeight="36.0" prefWidth="270.0" promptText="Doe" style="-fx-background-color: inherit; -fx-border-color: #F05454; -fx-border-width: 0 0 2 0; -fx-padding: 0; -fx-text-fill: white;">
+            <TextField fx:id="lastNameField" layoutX="45.0" layoutY="221.0" prefHeight="36.0" prefWidth="270.0" promptText="Doe" styleClass="cta-text-field">
                <font>
                   <Font size="18.0" />
                </font>
             </TextField>
-            <TextField fx:id="regField" layoutX="352.0" layoutY="221.0" prefHeight="36.0" prefWidth="270.0" promptText="ENE..." style="-fx-background-color: inherit; -fx-border-color: #F05454; -fx-border-width: 0 0 2 0; -fx-padding: 0; -fx-text-fill: white;">
+            <TextField fx:id="regField" layoutX="352.0" layoutY="221.0" prefHeight="36.0" prefWidth="270.0" promptText="ENE..." styleClass="cta-text-field">
                <font>
                   <Font size="18.0" />
                </font>
