--- a/src/application/views/Units.fxml
+++ b/src/application/views/Units.fxml
@@ -2,12 +2,14 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="700.0" prefWidth="930.0" styleClass="scene" stylesheets="@css/style.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controllers.views.UnitsController">
@@ -52,7 +54,34 @@
         </Pane>
         <Pane layoutX="267.0" prefHeight="700.0" prefWidth="664.0">
          <children>
-            <VBox fx:id="vBox" onMouseDragged="#populateTable" prefHeight="700.0" prefWidth="664.0" />
+            <TableView fx:id="unitsTable" layoutY="87.0" prefHeight="613.0" prefWidth="664.0">
+              <columns>
+                <TableColumn fx:id="unitNameCol" prefWidth="248.0" text="Unit Name" />
+                <TableColumn fx:id="unitCodeCol" prefWidth="114.0" text="Unit Code" />
+                  <TableColumn fx:id="lecturerCol" prefWidth="196.0" text="Lecturer" />
+                  <TableColumn fx:id="pagesCol" prefWidth="105.0" text="Pages" />
+              </columns>
+            </TableView>
+            <Button layoutX="555.0" layoutY="14.0" mnemonicParsing="false" onAction="#addUnit" prefHeight="40.0" prefWidth="95.0" styleClass="cta-button" text="Add">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Button>
+            <Button layoutX="450.0" layoutY="14.0" mnemonicParsing="false" onAction="#deleteUnit" prefHeight="40.0" prefWidth="95.0" styleClass="cta-button" text="Delete">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Button>
+            <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#refreshView" prefHeight="40.0" prefWidth="95.0" styleClass="cta-button" text="Refresh">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Button>
+            <TextField fx:id="searchTextField" layoutX="130.0" layoutY="14.0" prefHeight="40.0" prefWidth="299.0" promptText="Search Units" styleClass="cta-text-field">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </TextField>
          </children>
         </Pane>
     </children>
