--- a/src/application/views/modals/UnitModal.fxml
+++ b/src/application/views/modals/UnitModal.fxml
@@ -6,40 +6,35 @@
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="373.0" prefWidth="600.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controllers.views.UnitsController">
+<AnchorPane prefHeight="278.0" prefWidth="600.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controllers.views.UnitsController">
    <children>
-      <Pane prefHeight="82.0" prefWidth="600.0" styleClass="cta-pane" stylesheets="@../css/style.css">
-         <children>
-            <Label layoutX="14.0" layoutY="21.0" styleClass="cta-header" text="Create Unit" />
-         </children></Pane>
-      <Button fx:id="createUnitButton" layoutX="193.0" layoutY="309.0" mnemonicParsing="false" onAction="#createUnit" prefHeight="40.0" prefWidth="214.0" styleClass="cta-button" text="Create" />
-      <TextField fx:id="unitNameField" layoutX="14.0" layoutY="138.0" prefHeight="40.0" prefWidth="249.0" promptText="eg, Programming 2" styleClass="cta-text-field" />
-      <Label layoutX="14.0" layoutY="110.0" prefHeight="25.0" prefWidth="109.0" styleClass="cta-text-field-label" text="Unit Name">
+      <Button fx:id="createButton" layoutX="193.0" layoutY="213.0" mnemonicParsing="false" onAction="#createUnit" prefHeight="40.0" prefWidth="214.0" styleClass="cta-button" text="Create" />
+      <TextField fx:id="unitNameField" layoutX="14.0" layoutY="42.0" prefHeight="40.0" prefWidth="249.0" promptText="eg, Programming 2" styleClass="cta-text-field" />
+      <Label layoutX="14.0" layoutY="14.0" prefHeight="25.0" prefWidth="109.0" styleClass="cta-text-field-label" text="Unit Name">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <TextField fx:id="unitCodeField" layoutX="14.0" layoutY="231.0" prefHeight="40.0" prefWidth="249.0" promptText="eg, ETI..." styleClass="cta-text-field" />
-      <Label layoutX="14.0" layoutY="203.0" prefHeight="25.0" prefWidth="109.0" styleClass="cta-text-field-label" text="Unit Code">
+      <TextField fx:id="unitCodeField" layoutX="14.0" layoutY="135.0" prefHeight="40.0" prefWidth="249.0" promptText="eg, ETI..." styleClass="cta-text-field" />
+      <Label layoutX="14.0" layoutY="107.0" prefHeight="25.0" prefWidth="109.0" styleClass="cta-text-field-label" text="Unit Code">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <TextField fx:id="lecturerField" layoutX="337.0" layoutY="138.0" prefHeight="40.0" prefWidth="249.0" promptText="eg, Programming 2" styleClass="cta-text-field" />
-      <Label layoutX="337.0" layoutY="110.0" prefHeight="25.0" prefWidth="109.0" styleClass="cta-text-field-label" text="Lecturer">
+      <TextField fx:id="lecturerField" layoutX="337.0" layoutY="42.0" prefHeight="40.0" prefWidth="249.0" promptText="eg, Programming 2" styleClass="cta-text-field" />
+      <Label layoutX="337.0" layoutY="14.0" prefHeight="25.0" prefWidth="109.0" styleClass="cta-text-field-label" text="Lecturer">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="337.0" layoutY="203.0" prefHeight="25.0" prefWidth="109.0" styleClass="cta-text-field-label" text="# of Pages">
+      <Label layoutX="337.0" layoutY="107.0" prefHeight="25.0" prefWidth="109.0" styleClass="cta-text-field-label" text="# of Pages">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Spinner fx:id="numberOfPagesField" editable="true" layoutX="337.0" layoutY="235.0" prefHeight="40.0" prefWidth="249.0" />
+      <Spinner fx:id="numberOfPagesField" editable="true" layoutX="337.0" layoutY="139.0" prefHeight="40.0" prefWidth="249.0" />
    </children>
    <styleClass>
       <String fx:value="cta" />
