--- a/src/application/views/Tests.fxml
+++ b/src/application/views/Tests.fxml
@@ -2,6 +2,9 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -50,9 +53,42 @@
             </children>
         </Pane>
         <Pane layoutX="267.0" prefHeight="700.0" prefWidth="664.0">
-            <children>
-                <Label layoutX="285.0" layoutY="350.0" styleClass="cta-header" text="Tests" />
-            </children>
+         <children>
+            <TableView fx:id="catsTable" layoutX="10.0" layoutY="70.0" prefHeight="280.0" prefWidth="645.0">
+              <columns>
+                <TableColumn fx:id="catUnitCol" prefWidth="229.0" text="Unit" />
+                <TableColumn fx:id="catDateCol" prefWidth="120.0" text="Date" />
+                  <TableColumn fx:id="catTypeCol" prefWidth="125.0" text="Type" />
+                  <TableColumn fx:id="editCatActionCol" prefWidth="85.0" />
+                  <TableColumn fx:id="deleteCatActionCol" prefWidth="85.0" />
+              </columns>
+            </TableView>
+            <TableView fx:id="examsTable" layoutX="10.0" layoutY="406.0" prefHeight="280.0" prefWidth="645.0">
+               <columns>
+                  <TableColumn fx:id="examUnitCol" prefWidth="230.0" text="Unit" />
+                  <TableColumn fx:id="examDateCol" prefWidth="120.0" text="Date" />
+                  <TableColumn prefWidth="125.0" />
+                  <TableColumn fx:id="editExamActionCol" prefWidth="85.0" />
+                  <TableColumn fx:id="deleteExamActionCol" prefWidth="85.0" />
+               </columns>
+            </TableView>
+            <Label layoutX="307.0" layoutY="2.0" style="-fx-text-fill: white;" text="CATs">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <Label layoutX="299.0" layoutY="356.0" style="-fx-text-fill: white;" text="Exams">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <Button layoutX="16.0" layoutY="36.0" mnemonicParsing="false" onAction="#refreshView" prefHeight="25.0" prefWidth="73.0" styleClass="cta-button" text="Refresh" />
+            <Button layoutX="16.0" layoutY="381.0" mnemonicParsing="false" onAction="#refreshView" prefHeight="25.0" prefWidth="73.0" styleClass="cta-button" text="Refresh" />
+            <Button layoutX="577.0" layoutY="36.0" mnemonicParsing="false" onAction="#addCat" prefHeight="25.0" prefWidth="73.0" styleClass="cta-button" text="Add" />
+            <Button layoutX="577.0" layoutY="381.0" mnemonicParsing="false" onAction="#addExam" prefHeight="25.0" prefWidth="73.0" styleClass="cta-button" text="Add" />
+            <TextField fx:id="searchCatTextField" layoutX="183.0" layoutY="36.0" prefHeight="25.0" prefWidth="300.0" promptText="Search CAT" styleClass="cta-text-field" />
+            <TextField fx:id="searchExamTextField" layoutX="183.0" layoutY="381.0" prefHeight="25.0" prefWidth="300.0" promptText="Search Exam" styleClass="cta-text-field" />
+         </children>
         </Pane>
     </children>
 </AnchorPane>
