--- a/src/application/views/Tests.fxml
+++ b/src/application/views/Tests.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -54,18 +56,18 @@
         </Pane>
         <Pane layoutX="267.0" prefHeight="700.0" prefWidth="664.0">
          <children>
-            <TableView fx:id="catsTable" layoutX="10.0" layoutY="70.0" prefHeight="280.0" prefWidth="645.0">
+            <TableView fx:id="catsTable" editable="true" layoutX="10.0" layoutY="70.0" prefHeight="241.0" prefWidth="645.0">
               <columns>
-                <TableColumn fx:id="catUnitCol" prefWidth="229.0" text="Unit" />
+                <TableColumn fx:id="catUnitCol" onEditCommit="#onCatUnitsEditCommit" prefWidth="230.0" text="Unit" />
                 <TableColumn fx:id="catDateCol" prefWidth="120.0" text="Date" />
-                  <TableColumn fx:id="catTypeCol" prefWidth="125.0" text="Type" />
+                  <TableColumn fx:id="catTypeCol" onEditCommit="#onCatTypesEditCommit" prefWidth="125.0" text="Type" />
                   <TableColumn fx:id="editCatActionCol" prefWidth="85.0" />
                   <TableColumn fx:id="deleteCatActionCol" prefWidth="85.0" />
               </columns>
             </TableView>
-            <TableView fx:id="examsTable" layoutX="10.0" layoutY="406.0" prefHeight="280.0" prefWidth="645.0">
+            <TableView fx:id="examsTable" editable="true" layoutX="10.0" layoutY="406.0" prefHeight="250.0" prefWidth="645.0">
                <columns>
-                  <TableColumn fx:id="examUnitCol" prefWidth="230.0" text="Unit" />
+                  <TableColumn fx:id="examUnitCol" onEditCommit="#onExamUnitsEditCommit" prefWidth="230.0" text="Unit" />
                   <TableColumn fx:id="examDateCol" prefWidth="120.0" text="Date" />
                   <TableColumn prefWidth="125.0" />
                   <TableColumn fx:id="editExamActionCol" prefWidth="85.0" />
@@ -84,10 +86,17 @@
             </Label>
             <Button layoutX="16.0" layoutY="36.0" mnemonicParsing="false" onAction="#refreshView" prefHeight="25.0" prefWidth="73.0" styleClass="cta-button" text="Refresh" />
             <Button layoutX="16.0" layoutY="381.0" mnemonicParsing="false" onAction="#refreshView" prefHeight="25.0" prefWidth="73.0" styleClass="cta-button" text="Refresh" />
-            <Button layoutX="577.0" layoutY="36.0" mnemonicParsing="false" onAction="#addCat" prefHeight="25.0" prefWidth="73.0" styleClass="cta-button" text="Add" />
-            <Button layoutX="577.0" layoutY="381.0" mnemonicParsing="false" onAction="#addExam" prefHeight="25.0" prefWidth="73.0" styleClass="cta-button" text="Add" />
+            <Button layoutX="577.0" layoutY="36.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="73.0" styleClass="cta-button" text="Add" />
+            <Button layoutX="577.0" layoutY="381.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="73.0" styleClass="cta-button" text="Add" />
             <TextField fx:id="searchCatTextField" layoutX="183.0" layoutY="36.0" prefHeight="25.0" prefWidth="300.0" promptText="Search CAT" styleClass="cta-text-field" />
             <TextField fx:id="searchExamTextField" layoutX="183.0" layoutY="381.0" prefHeight="25.0" prefWidth="300.0" promptText="Search Exam" styleClass="cta-text-field" />
+            <ComboBox fx:id="catUnitsCombo" layoutX="12.0" layoutY="321.0" prefHeight="24.0" prefWidth="203.0" promptText="Unit" />
+            <DatePicker fx:id="catDatePicker" layoutX="227.0" layoutY="321.0" prefHeight="24.0" prefWidth="120.0" promptText="Date" />
+            <ComboBox fx:id="catTypesCombo" layoutX="357.0" layoutY="320.0" prefWidth="150.0" promptText="Type" />
+            <Button layoutX="577.0" layoutY="320.0" mnemonicParsing="false" onAction="#addCat" prefHeight="25.0" prefWidth="73.0" styleClass="cta-button" text="Add" />
+            <ComboBox fx:id="examUnitsCombo" layoutX="12.0" layoutY="661.0" prefHeight="24.0" prefWidth="203.0" promptText="Unit" />
+            <DatePicker fx:id="examDatePicker" layoutX="227.0" layoutY="661.0" prefHeight="24.0" prefWidth="120.0" promptText="Date" />
+            <Button layoutX="579.0" layoutY="661.0" mnemonicParsing="false" onAction="#addExam" prefHeight="25.0" prefWidth="73.0" styleClass="cta-button" text="Add" />
          </children>
         </Pane>
     </children>
