--- a/src/application/views/Submissions.fxml
+++ b/src/application/views/Submissions.fxml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -29,8 +34,8 @@
                         <Button fx:id="homeButton" mnemonicParsing="false" onAction="#changeView" prefHeight="125.0" prefWidth="282.0" styleClass="grid-pane-button" text="Home" />
                         <Button fx:id="unitsButton" mnemonicParsing="false" onAction="#changeView" prefHeight="125.0" prefWidth="282.0" styleClass="grid-pane-button" text="Units" GridPane.rowIndex="1" />
                         <Button fx:id="remindersButton" mnemonicParsing="false" onAction="#changeView" prefHeight="125.0" prefWidth="282.0" styleClass="grid-pane-button" text="Reminders" GridPane.rowIndex="2" />
-                        <Button fx:id="testsButton" mnemonicParsing="false" onAction="#changeView" prefHeight="125.0" prefWidth="282.0" styleClass="grid-pane-button" text="Tests" GridPane.rowIndex="3" />
-                        <Button fx:id="submissionsButton" mnemonicParsing="false" prefHeight="125.0" prefWidth="282.0" style="-fx-background-color: #222831;" styleClass="grid-pane-button" text="Submissions" GridPane.rowIndex="4" />
+                        <Button fx:id="testsButton" mnemonicParsing="false" prefHeight="125.0" prefWidth="282.0" styleClass="grid-pane-button" text="Tests" GridPane.rowIndex="3" />
+                        <Button fx:id="submissionsButton" mnemonicParsing="false" onAction="#changeView" prefHeight="125.0" prefWidth="282.0" style="-fx-background-color: #222831;" styleClass="grid-pane-button" text="Submissions" GridPane.rowIndex="4" />
                         <Button fx:id="loungeButton" mnemonicParsing="false" onAction="#changeView" prefHeight="122.0" prefWidth="267.0" styleClass="grid-pane-button" text="Lounge" GridPane.rowIndex="5" />
                     </children>
                 </GridPane>
@@ -51,7 +56,48 @@
         </Pane>
         <Pane layoutX="267.0" prefHeight="700.0" prefWidth="664.0">
             <children>
-                <Label layoutX="285.0" layoutY="350.0" styleClass="cta-header" text="Submissions" />
+                <TableView fx:id="reportsTable" editable="true" layoutX="10.0" layoutY="70.0" prefHeight="241.0" prefWidth="645.0">
+                    <columns>
+                        <TableColumn fx:id="reportUnitCol" onEditCommit="#onReportUnitsEditCommit" prefWidth="230.0" text="Unit" />
+                        <TableColumn fx:id="reportDateCol" prefWidth="120.0" text="Date" />
+                        <TableColumn fx:id="reportTypeCol" onEditCommit="#onReportTypesEditCommit" prefWidth="125.0" text="Type" />
+                        <TableColumn fx:id="editReportActionCol" prefWidth="85.0" />
+                        <TableColumn fx:id="deleteReportActionCol" prefWidth="85.0" />
+                    </columns>
+                </TableView>
+                <TableView fx:id="assignmentsTable" editable="true" layoutX="10.0" layoutY="406.0" prefHeight="250.0" prefWidth="645.0">
+                    <columns>
+                        <TableColumn fx:id="assignmentUnitCol" onEditCommit="#onAssignmentUnitsEditCommit" prefWidth="230.0" text="Unit" />
+                        <TableColumn fx:id="assignmentDateCol" prefWidth="120.0" text="Date" />
+                        <TableColumn fx:id="assignmentTypeCol" onEditCommit="#onAssignmentTypesEditCommit" prefWidth="125.0" text="Type" />
+                        <TableColumn fx:id="editAssignmentActionCol" prefWidth="85.0" />
+                        <TableColumn fx:id="deleteAssignmentActionCol" prefWidth="85.0" />
+                    </columns>
+                </TableView>
+                <Label layoutX="307.0" layoutY="2.0" style="-fx-text-fill: white;" text="Reports">
+                    <font>
+                        <Font size="20.0" />
+                    </font>
+                </Label>
+                <Label layoutX="299.0" layoutY="356.0" style="-fx-text-fill: white;" text="Assignments">
+                    <font>
+                        <Font size="20.0" />
+                    </font>
+                </Label>
+                <Button layoutX="16.0" layoutY="36.0" mnemonicParsing="false" onAction="#refreshView" prefHeight="25.0" prefWidth="73.0" styleClass="cta-button" text="Refresh" />
+                <Button layoutX="16.0" layoutY="381.0" mnemonicParsing="false" onAction="#refreshView" prefHeight="25.0" prefWidth="73.0" styleClass="cta-button" text="Refresh" />
+                <Button layoutX="577.0" layoutY="36.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="73.0" styleClass="cta-button" text="Add" />
+                <Button layoutX="577.0" layoutY="381.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="73.0" styleClass="cta-button" text="Add" />
+                <TextField fx:id="searchReportTextField" layoutX="183.0" layoutY="36.0" prefHeight="25.0" prefWidth="300.0" promptText="Search CAT" styleClass="cta-text-field" />
+                <TextField fx:id="searchAssignmentTextField" layoutX="183.0" layoutY="381.0" prefHeight="25.0" prefWidth="300.0" promptText="Search Assignment" styleClass="cta-text-field" />
+                <ComboBox fx:id="reportUnitsCombo" layoutX="12.0" layoutY="321.0" prefHeight="24.0" prefWidth="203.0" promptText="Unit" />
+                <DatePicker fx:id="reportDatePicker" layoutX="227.0" layoutY="321.0" prefHeight="24.0" prefWidth="120.0" promptText="Date" />
+                <ComboBox fx:id="reportTypesCombo" layoutX="357.0" layoutY="320.0" prefWidth="150.0" promptText="Type" />
+                <Button layoutX="577.0" layoutY="320.0" mnemonicParsing="false" onAction="#addReport" prefHeight="25.0" prefWidth="73.0" styleClass="cta-button" text="Add" />
+                <ComboBox fx:id="assignmentUnitsCombo" layoutX="12.0" layoutY="661.0" prefHeight="24.0" prefWidth="203.0" promptText="Unit" />
+                <DatePicker fx:id="assignmentDatePicker" layoutX="227.0" layoutY="661.0" prefHeight="24.0" prefWidth="120.0" promptText="Date" />
+                <Button layoutX="579.0" layoutY="661.0" mnemonicParsing="false" onAction="#addAssignment" prefHeight="25.0" prefWidth="73.0" styleClass="cta-button" text="Add" />
+            <ComboBox fx:id="assignmentTypesCombo" layoutX="357.0" layoutY="661.0" prefWidth="150.0" promptText="Type" />
             </children>
         </Pane>
     </children>
