--- a/src/application/views/Reminders.fxml
+++ b/src/application/views/Reminders.fxml
@@ -2,6 +2,9 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -28,10 +31,10 @@
                     <children>
                         <Button fx:id="homeButton" mnemonicParsing="false" onAction="#changeView" prefHeight="125.0" prefWidth="282.0" styleClass="grid-pane-button" text="Home" />
                         <Button fx:id="unitsButton" mnemonicParsing="false" onAction="#changeView" prefHeight="125.0" prefWidth="282.0" styleClass="grid-pane-button" text="Units" GridPane.rowIndex="1" />
-                        <Button fx:id="remindersButton" mnemonicParsing="false" prefHeight="125.0" prefWidth="282.0" style="-fx-background-color: #222831;" styleClass="grid-pane-button" text="Reminders" GridPane.rowIndex="2" />
+                        <Button fx:id="remindersButton" mnemonicParsing="false" onAction="#changeView" prefHeight="125.0" prefWidth="282.0" style="-fx-background-color: #222831;" styleClass="grid-pane-button" text="Reminders" GridPane.rowIndex="2" />
                         <Button fx:id="testsButton" mnemonicParsing="false" onAction="#changeView" prefHeight="125.0" prefWidth="282.0" styleClass="grid-pane-button" text="Tests" GridPane.rowIndex="3" />
                         <Button fx:id="submissionsButton" mnemonicParsing="false" onAction="#changeView" prefHeight="125.0" prefWidth="282.0" styleClass="grid-pane-button" text="Submissions" GridPane.rowIndex="4" />
-                        <Button fx:id="loungeButton" mnemonicParsing="false" prefHeight="122.0" prefWidth="267.0" styleClass="grid-pane-button" text="Lounge" GridPane.rowIndex="5" />
+                        <Button fx:id="loungeButton" mnemonicParsing="false" onAction="#changeView" prefHeight="122.0" prefWidth="267.0" styleClass="grid-pane-button" text="Lounge" GridPane.rowIndex="5" />
                     </children>
                 </GridPane>
             </children></Pane>
@@ -51,7 +54,29 @@
         </Pane>
         <Pane layoutX="267.0" prefHeight="700.0" prefWidth="664.0">
             <children>
-                <Label layoutX="285.0" layoutY="350.0" styleClass="cta-header" text="Reminders" />
+                <TableView fx:id="remindersTable" editable="true" layoutX="14.0" layoutY="87.0" prefHeight="613.0" prefWidth="644.0">
+                    <columns>
+                        <TableColumn fx:id="reminderDescriptionCol" onEditCommit="#onReminderDescriptionEditCommit" prefWidth="281.0" text="Description" />
+                        <TableColumn fx:id="reminderDateCol" minWidth="0.0" prefWidth="191.0" text="Date" />
+                  <TableColumn fx:id="editReminderAction" minWidth="0.0" prefWidth="85.0" />
+                  <TableColumn fx:id="deleteReminderAction" minWidth="0.0" prefWidth="85.0" />
+                    </columns>
+                </TableView>
+                <Button layoutX="555.0" layoutY="14.0" mnemonicParsing="false" onAction="#addReminder" prefHeight="40.0" prefWidth="95.0" styleClass="cta-button" text="Add">
+                    <font>
+                        <Font size="17.0" />
+                    </font>
+                </Button>
+                <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#refreshView" prefHeight="40.0" prefWidth="95.0" styleClass="cta-button" text="Refresh">
+                    <font>
+                        <Font size="17.0" />
+                    </font>
+                </Button>
+                <TextField fx:id="searchTextField" layoutX="130.0" layoutY="14.0" prefHeight="40.0" prefWidth="407.0" promptText="Search Reminders" styleClass="cta-text-field">
+                    <font>
+                        <Font size="20.0" />
+                    </font>
+                </TextField>
             </children>
         </Pane>
     </children>
